--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -7,52 +7,47 @@
 }
 
 %text-preset-1-mobile {
+    @extend %text-preset-1;
+
     font-size: 3.8rem;
-    font-weight: 700;
-    line-height: 1.2;
-    letter-spacing: -2px;
 }
 
 %text-preset-2 {
+    @extend %text-preset-1;
+
     font-size: 5rem;
     font-weight: 600;
     line-height: 1.3;
-    letter-spacing: -2px;
 }
 
 %text-preset-2-mobile {
+    @extend %text-preset-2;
+
     font-size: 3.4rem;
-    font-weight: 600;
-    line-height: 1.3;
-    letter-spacing: -2px;
 }
 
 %text-preset-3 {
-    font-size: 3.4rem;
-    font-weight: 600;
-    line-height: 1.3;
+    @extend %text-preset-2-mobile;
+
     letter-spacing: -1px;
 }
 
 %text-preset-3-mobile {
+    @extend %text-preset-3;
+
     font-size: 2.4rem;
-    font-weight: 600;
     line-height: 1.1;
-    letter-spacing: -1px;
 }
 
 %text-preset-4 {
-    font-size: 2.4rem;
-    font-weight: 600;
-    line-height: 1.1;
-    letter-spacing: -1px;
+    @extend %text-preset-3-mobile;
 }
 
 %text-preset-4-regular {
-    font-size: 2.4rem;
+    @extend %text-preset-4;
+
     font-weight: 400;
     line-height: 1.2;
-    letter-spacing: -1px;
 }
 
 %text-preset-5 {
@@ -64,33 +59,30 @@
 }
 
 %text-preset-5-semibold {
-    font-size: 2rem;
-    font-family: "Inter";
+    @extend %text-preset-5;
+
     font-weight: 600;
-    line-height: 1.4;
-    letter-spacing: -0.5px;
 }
 
 %text-preset-6 {
+    @extend %text-preset-1;
+
     font-size: 1.8rem;
-    font-family: "Martian Mono";
     font-weight: 600;
     line-height: 1.3;
     letter-spacing: -1px;
 }
 
 %text-preset-6-mobile {
+    @extend %text-preset-6;
+
     font-size: 1.6rem;
-    font-family: "Martian Mono";
-    font-weight: 600;
-    line-height: 1.3;
-    letter-spacing: -1px;
 }
 
 %text-preset-7 {
+    @extend %text-preset-6;
+
     font-size: 1.4rem;
-    font-family: "Martian Mono";
     font-weight: 400;
     line-height: 1.2;
-    letter-spacing: -1px;
 }
