--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,3 +1,7 @@
 @import "abstracts/variables";
+@import "abstracts/placeholders";
+
 @import "base/reset";
 @import "base/typography";
+
+@import "components/buttons";
