--- a/styles/abstracts/_placeholders.scss
+++ b/styles/abstracts/_placeholders.scss
@@ -2,13 +2,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: map-get($map: $spacings, $key: 200);
+    gap: $spacing-200;
 }
 
 %button-style {
     border: none;
-    border-radius: map-get($map: $border-radius, $key: 8);
-    padding: map-get($map: $spacings, $key: 250) map-get($map: $spacings, $key: 300);
+    border-radius: $border-radius-8;
+    padding: $spacing-250 $spacing-300;
     text-transform: uppercase;
 
     @extend %text-preset-6;
@@ -17,27 +17,37 @@
 }
 
 %primary-button-style {
-    box-shadow: inset 0 0 0 2px map-get($map: $colors-neutral, $key: 900);
-    background-color: map-get($map: $colors-light-salmon, $key: 50);
-    color: map-get($map: $colors-neutral, $key: 900);
+    box-shadow: inset 0 0 0 2px $color-neutral-900;
+    background-color: $color-light-salmon-50;
+    color: $color-neutral-900;
 
     @extend %button-style;
 }
 
+%primary-button-style-hover {
+    background: $color-gradient;
+    cursor: pointer;
+}
+
 %primary-button-style-focus {
-    box-shadow: inset 0 0 0 2px map-get($map: $colors-neutral, $key: 900), 0 0 0 3px map-get($map: $colors-neutral, $key: 0), 0 0 0 5px map-get($map: $colors-neutral, $key: 700);
+    box-shadow: inset 0 0 0 2px $color-neutral-900, 0 0 0 3px $color-neutral-0, 0 0 0 5px $color-neutral-700;
     outline: none;
 }
 
 %alternate-button-style {
-    background-color: map-get($map: $colors-neutral, $key: 900);
-    color: map-get($map: $colors-neutral, $key: 0);
-    box-shadow: inset 0 0 0 2px map-get($map: $colors-neutral, $key: 0);
+    background-color: $color-neutral-900;
+    color: $color-neutral-0;
+    box-shadow: inset 0 0 0 2px $color-neutral-0;
 
     @extend %button-style;
 }
 
 %alternate-button-style-focus {
-    box-shadow: inset 0 0 0 2px map-get($map: $colors-neutral, $key: 0), 0 0 0 3px map-get($map: $colors-neutral, $key: 900), 0 0 0 5px map-get($map: $colors-neutral, $key: 200);
+    box-shadow: inset 0 0 0 2px $color-neutral-0, 0 0 0 3px $color-neutral-900, 0 0 0 5px $color-neutral-200;
     outline: none;
+}
+
+%alternate-button-style-hover {
+    background: linear-gradient(90deg, $color-neutral-700 0%, $color-neutral-900 100%);
+    cursor: pointer;
 }
