--- a/styles/base/_reset.scss
+++ b/styles/base/_reset.scss
@@ -13,6 +13,5 @@ body {
     font-family: "Martian Mono", sans-serif;
     font-weight: 500;
     line-height: 1;
-    background-color: map-get($map: $colors-neutral, $key: 700);
-    color: map-get($map: $colors-neutral, $key: 900);
+    color: $color-neutral-900;
 }
