--- a/styles/main.css
+++ b/styles/main.css
@@ -1,29 +1,29 @@
-.primary, .alternate {
+.primary, .hero__content-btn, .alternate, .hero, .hero__content-reviews {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 1.6rem;
 }
 
-.primary, .alternate {
+.primary, .hero__content-btn, .alternate {
   border: none;
   border-radius: 0.8rem;
   padding: 2rem 2.4rem;
   text-transform: uppercase;
 }
 
-.primary {
+.primary, .hero__content-btn {
   box-shadow: inset 0 0 0 2px #062630;
   background-color: #fff5ef;
   color: #062630;
 }
 
-.primary:hover {
+.primary:hover, .hero__content-btn:hover {
   background: linear-gradient(90deg, #ffe2d1 0%, #fff5ef 100%);
   cursor: pointer;
 }
 
-.primary:focus, .primary:focus-visible, .primary:focus-within {
+.primary:focus, .primary:focus-visible, .primary:focus-within, .hero__content-btn:focus, .hero__content-btn:focus-visible, .hero__content-btn:focus-within {
   box-shadow: inset 0 0 0 2px #062630, 0 0 0 3px #fff, 0 0 0 5px #385159;
   outline: none;
 }
@@ -62,7 +62,7 @@ body {
   color: #062630;
 }
 
-.primary, .alternate {
+.primary, .hero__content-btn, .alternate, .hero__content-rating p, .hero__content-title {
   font-size: 6.2rem;
   font-weight: 700;
   font-family: "Martian Mono";
@@ -70,11 +70,25 @@ body {
   letter-spacing: -2px;
 }
 
-.primary, .alternate {
+.hero__content-description {
+  font-size: 2rem;
+  font-family: "Inter";
+  font-weight: 400;
+  line-height: 1.4;
+  letter-spacing: -0.5px;
+}
+
+.primary, .hero__content-btn, .alternate, .hero__content-rating p {
   font-size: 1.8rem;
   font-weight: 600;
   line-height: 1.3;
   letter-spacing: -1px;
+}
+
+.hero__content-rating p {
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 1.2;
 }
 
 .primary {
@@ -84,3 +98,92 @@ body {
 .alternate {
   margin: 2rem;
 }
+
+.main-container {
+  max-width: 144rem;
+  margin: 0 auto;
+}
+
+.hero {
+  background-image: url("/starter-code/assets/images/pattern-light-bg.svg");
+  background-color: #faf5f3;
+  width: 100%;
+  height: auto;
+  padding: 3.2rem 13.5rem 8rem;
+  position: relative;
+  overflow: hidden;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8rem;
+}
+
+.hero::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: -30%;
+  background-color: #9cc9da;
+  opacity: 40%;
+  filter: blur(20rem);
+  width: 684px;
+  height: 684px;
+  border-radius: 50%;
+  pointer-events: none;
+}
+
+.hero__content {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 6.4rem;
+  align-items: center;
+}
+
+.hero__content-title {
+  background: linear-gradient(107deg, #FF9A60 -11.37%, #062630 61.84%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin-bottom: 2.4rem;
+}
+
+.hero__content-description {
+  color: #385159;
+  margin-bottom: 3.2rem;
+}
+
+.hero__content-btn {
+  margin-bottom: 2rem;
+}
+
+.hero__content-reviews {
+  justify-content: start;
+  align-items: center;
+  gap: 1.2rem;
+}
+
+.hero__content-avatars {
+  max-width: 11rem;
+}
+
+.hero__content-rating img {
+  width: 2.4rem;
+  height: 2.4rem;
+  margin-bottom: 0.4rem;
+}
+
+.hero__content-rating p {
+  color: #385159;
+}
+
+.hero__content-image {
+  width: 54rem;
+}
+
+.hero__content-image img {
+  width: 100%;
+  height: 100%;
+  border-radius: 1rem;
+}
+
+/* HACK: small mobiles (320px ~ 480px) */
+/* HACK: large mobiles (481px ~ 767px) */
+/* HACK: tablets (768px ~ 1024px) */
