--- a/styles/layout/_hero.scss
+++ b/styles/layout/_hero.scss
@@ -29,7 +29,7 @@
 
     &__content {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: 1fr 54rem;
         column-gap: $spacing-800;
         align-items: center;
 
@@ -90,13 +90,9 @@
         }
 
         &-image {
-            width: 54rem;
-
-            img {
-                width: 100%;
-                height: 100%;
-                border-radius: $border-radius-10;
-            }
+            width: 100%;
+            height: 100%;
+            border-radius: $border-radius-10;
         }
     }
 }
