--- a/styles/main.css
+++ b/styles/main.css
@@ -133,7 +133,7 @@ body {
 
 .hero__content {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr 54rem;
   column-gap: 6.4rem;
   align-items: center;
 }
@@ -175,10 +175,6 @@ body {
 }
 
 .hero__content-image {
-  width: 54rem;
-}
-
-.hero__content-image img {
   width: 100%;
   height: 100%;
   border-radius: 1rem;
