--- a/styles/main.css
+++ b/styles/main.css
@@ -1,29 +1,29 @@
-.primary, .hero__content-btn, .alternate, .hero, .hero__content-reviews {
+.primary, .alternate, .hero, .hero__content-reviews {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 1.6rem;
 }
 
-.primary, .hero__content-btn, .alternate {
+.primary, .alternate {
   border: none;
   border-radius: 0.8rem;
   padding: 2rem 2.4rem;
   text-transform: uppercase;
 }
 
-.primary, .hero__content-btn {
+.primary {
   box-shadow: inset 0 0 0 2px #062630;
   background-color: #fff5ef;
   color: #062630;
 }
 
-.primary:hover, .hero__content-btn:hover {
+.primary:hover {
   background: linear-gradient(90deg, #ffe2d1 0%, #fff5ef 100%);
   cursor: pointer;
 }
 
-.primary:focus, .primary:focus-visible, .primary:focus-within, .hero__content-btn:focus, .hero__content-btn:focus-visible, .hero__content-btn:focus-within {
+.primary:focus, .primary:focus-visible, .primary:focus-within {
   box-shadow: inset 0 0 0 2px #062630, 0 0 0 3px #fff, 0 0 0 5px #385159;
   outline: none;
 }
@@ -62,7 +62,7 @@ body {
   color: #062630;
 }
 
-.primary, .hero__content-btn, .alternate, .hero__content-rating p, .hero__content-title {
+.primary, .alternate, .hero__content-rating p, .hero__content-title {
   font-size: 6.2rem;
   font-weight: 700;
   font-family: "Martian Mono";
@@ -78,7 +78,7 @@ body {
   letter-spacing: -0.5px;
 }
 
-.primary, .hero__content-btn, .alternate, .hero__content-rating p {
+.primary, .alternate, .hero__content-rating p {
   font-size: 1.8rem;
   font-weight: 600;
   line-height: 1.3;
@@ -89,14 +89,6 @@ body {
   font-size: 1.4rem;
   font-weight: 400;
   line-height: 1.2;
-}
-
-.primary {
-  margin: 2rem;
-}
-
-.alternate {
-  margin: 2rem;
 }
 
 .main-container {
@@ -123,7 +115,6 @@ body {
   top: 50%;
   right: -30%;
   background-color: #9cc9da;
-  opacity: 40%;
   filter: blur(20rem);
   width: 684px;
   height: 684px;
@@ -141,6 +132,7 @@ body {
 .hero__content-title {
   background: linear-gradient(107deg, #FF9A60 -11.37%, #062630 61.84%);
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
   margin-bottom: 2.4rem;
 }
