--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -11,19 +11,33 @@ $color-light-salmon-50: #fff5ef;
 $color-gradient-text-gradient: linear-gradient(107deg, #FF9A60 -11.37%, #062630 61.84%);
 $color-gradient: linear-gradient(90deg, $color-light-salmon-100 0%, $color-light-salmon-50 100%);
 
-$spacing-25: 0.2rem;
-$spacing-50: 0.4rem;
-$spacing-75: 0.6rem;
-$spacing-100: 0.8rem;
-$spacing-150: 1.2rem;
-$spacing-200: 1.6rem;
-$spacing-250: 2rem;
-$spacing-300: 2.4rem;
-$spacing-400: 3.2rem;
-$spacing-500: 4rem;
-$spacing-600: 4.8rem;
-$spacing-800: 6.4rem;
-$spacing-1000: 8rem;
+// $spacing-25: 0.2rem;
+// $spacing-50: 0.4rem;
+// $spacing-75: 0.6rem;
+// $spacing-100: 0.8rem;
+// $spacing-150: 1.2rem;
+// $spacing-200: 1.6rem;
+// $spacing-250: 2rem;
+// $spacing-300: 2.4rem;
+// $spacing-400: 3.2rem;
+// $spacing-500: 4rem;
+// $spacing-600: 4.8rem;
+// $spacing-800: 6.4rem;
+// $spacing-1000: 8rem;
+
+$spacing-2: 0.2rem;
+$spacing-4: 0.4rem;
+$spacing-6: 0.6rem;
+$spacing-8: 0.8rem;
+$spacing-12: 1.2rem;
+$spacing-16: 1.6rem;
+$spacing-20: 2rem;
+$spacing-24: 2.4rem;
+$spacing-32: 3.2rem;
+$spacing-40: 4rem;
+$spacing-48: 4.8rem;
+$spacing-64: 6.4rem;
+$spacing-80: 8rem;
 
 $border-radius-4: 0.4rem;
 $border-radius-6: 0.6rem;
