--- a/styles/main.css
+++ b/styles/main.css
@@ -104,6 +104,7 @@ body {
   padding: 3.2rem 13.5rem 8rem;
   position: relative;
   overflow: hidden;
+  z-index: 10;
   flex-direction: column;
   align-items: flex-start;
   gap: 8rem;
@@ -121,6 +122,7 @@ body {
   height: 68.4rem;
   border-radius: 50%;
   pointer-events: none;
+  z-index: -1;
 }
 
 .hero__content {
@@ -176,3 +178,37 @@ body {
 /* HACK: small mobiles (320px ~ 480px) */
 /* HACK: large mobiles (481px ~ 767px) */
 /* HACK: tablets (768px ~ 1024px) */
+/* HACK: tablets (768px ~ 1024px) */
+@media (min-width: 48em) and (max-width: 64em) {
+  .hero {
+    padding: 3.2rem 3.2rem 8rem;
+    gap: 6.4rem;
+    position: relative;
+    overflow: hidden;
+    z-index: 10;
+  }
+  .hero::after {
+    content: "";
+    position: absolute;
+    top: 73%;
+    right: -50%;
+    background-color: #9cc9da;
+    opacity: 0.8;
+    filter: blur(20rem);
+    width: 68.4rem;
+    height: 68.4rem;
+    border-radius: 50%;
+    pointer-events: none;
+    z-index: -1;
+  }
+  .hero__content {
+    grid-template-columns: 1fr;
+    row-gap: 6.4rem;
+  }
+  .hero__content-title {
+    letter-spacing: -1px;
+  }
+  .hero__content-description {
+    letter-spacing: -0.2px;
+  }
+}
