Add breakpoints for larger tablets (landscape) hero section

--- a/styles/layout/_hero.scss
+++ b/styles/layout/_hero.scss
@@ -84,13 +84,10 @@
 /* HACK: tablets (768px ~ 1024px) */
 
 /* HACK: tablets (768px ~ 1024px ~ 1264px) */
-@media (min-width: 48em) and (max-width: 79em) {
+@media (min-width: 48em) and (max-width: 64em) {
     .hero {
         padding: $spacing-32 $spacing-32 $spacing-80;
         gap: $spacing-64;
-        position: relative;
-        overflow: hidden;
-        z-index: 10;
 
         &::after {
             @include blur-effect(73%, -50%);
@@ -100,6 +97,32 @@
             grid-template-columns: 1fr;
             row-gap: $spacing-64;
 
+            &-title {
+                letter-spacing: -1px;
+            }
+
+            &-description {
+                letter-spacing: -0.2px;
+            }
+        }
+    }
+}
+
+/* HACK: large tablets (1025px ~ 1265px) */
+@media (min-width: 64.063em) and (max-width: 79.063em) {
+    html {
+        font-size: 56.25%;
+    }
+
+    .hero {
+        padding: $spacing-64 $spacing-48;
+        gap: $spacing-64;
+
+        &::after {
+            @include blur-effect(50%, -30%);
+        }
+
+        &__content {
             &-title {
                 letter-spacing: -1px;
             }
