--- a/styles/main.css
+++ b/styles/main.css
@@ -178,13 +178,22 @@ body {
 /* HACK: small mobiles (320px ~ 480px) */
 /* HACK: large mobiles (481px ~ 767px) */
 /* HACK: tablets (768px ~ 1024px) */
-/* HACK: tablets (768px ~ 1024px ~ 1264px) */
+@media (max-width: 79.063em) {
+  .hero {
+    gap: 6.4rem;
+  }
+  .hero__content-title {
+    letter-spacing: -1px;
+  }
+  .hero__content-description {
+    letter-spacing: -0.2px;
+  }
+}
+
+/* HACK: tablets (768px ~ 1024px) */
 @media (min-width: 48em) and (max-width: 64em) {
   .hero {
     padding: 3.2rem 3.2rem 8rem;
-    gap: 6.4rem;
-    position: relative;
-    overflow: hidden;
   }
   .hero::after {
     content: "";
@@ -204,12 +213,6 @@ body {
     grid-template-columns: 1fr;
     row-gap: 6.4rem;
   }
-  .hero__content-title {
-    letter-spacing: -1px;
-  }
-  .hero__content-description {
-    letter-spacing: -0.2px;
-  }
 }
 
 /* HACK: large tablets (1025px ~ 1265px) */
@@ -219,9 +222,6 @@ body {
   }
   .hero {
     padding: 6.4rem 4.8rem;
-    gap: 6.4rem;
-    position: relative;
-    overflow: hidden;
   }
   .hero::after {
     content: "";
@@ -236,11 +236,5 @@ body {
     border-radius: 50%;
     pointer-events: none;
     z-index: -1;
-  }
-  .hero__content-title {
-    letter-spacing: -1px;
-  }
-  .hero__content-description {
-    letter-spacing: -0.2px;
   }
 }
