--- a/styles/main.css
+++ b/styles/main.css
@@ -178,7 +178,42 @@ body {
 /* HACK: small mobiles (320px ~ 480px) */
 /* HACK: large mobiles (481px ~ 767px) */
 /* HACK: tablets (768px ~ 1024px) */
-@media (max-width: 79.063em) {
+/* HACK: small mobiles (320px ~ 480px) */
+@media (min-width: 20em) and (max-width: 30em) {
+  .hero {
+    padding: 2.4rem 1.6rem 8rem;
+    gap: 4.8rem;
+  }
+  .hero::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    right: 100%;
+    background-color: #9cc9da;
+    opacity: 0.8;
+    filter: blur(20rem);
+    width: 68.4rem;
+    height: 68.4rem;
+    border-radius: 50%;
+    pointer-events: none;
+    z-index: -1;
+  }
+  .hero__content {
+    grid-template-columns: 1fr;
+    row-gap: 6.4rem;
+  }
+  .hero__content-title {
+    font-size: 3.8rem;
+  }
+  .hero__content-description {
+    letter-spacing: -0.2px;
+  }
+  .hero__content-btn {
+    font-size: calc(1.2rem + .2vw);
+  }
+}
+
+@media (min-width: 48em) and (max-width: 79.063em) {
   .hero {
     gap: 6.4rem;
   }
