--- a/styles/main.css
+++ b/styles/main.css
@@ -1,10 +1,3 @@
-.primary, .alternate, .hero, .hero__content-reviews {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 1.6rem;
-}
-
 .primary, .alternate {
   border: none;
   border-radius: 0.8rem;
@@ -91,9 +84,17 @@ body {
   line-height: 1.2;
 }
 
-.main-container {
-  max-width: 144rem;
-  margin: 0 auto;
+.primary, .alternate, .hero, .hero__content-reviews {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.6rem;
+}
+
+.hero__content {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
 }
 
 .hero {
@@ -126,10 +127,8 @@ body {
 }
 
 .hero__content {
-  display: grid;
   grid-template-columns: 1fr 54rem;
   column-gap: 6.4rem;
-  align-items: center;
 }
 
 .hero__content-title {
@@ -298,4 +297,9 @@ body {
     pointer-events: none;
     z-index: -1;
   }
+}
+
+.main-container {
+  max-width: 144rem;
+  margin: 0 auto;
 }
