--- a/styles/main.scss
+++ b/styles/main.scss
@@ -7,5 +7,7 @@
 
 @import "components/buttons";
 
-@import "layout/main";
+@import "layout/flexbox";
+@import "layout/grid";
 @import "layout/hero";
+@import "layout/main";
