--- a/styles/main.css
+++ b/styles/main.css
@@ -55,7 +55,7 @@ body {
   color: #062630;
 }
 
-.primary, .alternate, .hero__content-rating p, .hero__content-title {
+.introduction__title, .primary, .alternate, .hero__content-rating p, .hero__content-title {
   font-size: 6.2rem;
   font-weight: 700;
   font-family: "Martian Mono";
@@ -63,12 +63,22 @@ body {
   letter-spacing: -2px;
 }
 
-.hero__content-description {
+.introduction__title {
+  font-size: 5rem;
+  font-weight: 600;
+  line-height: 1.3;
+}
+
+.introduction__description span, .hero__content-description, .introduction__list--item, .introduction__description {
   font-size: 2rem;
   font-family: "Inter";
   font-weight: 400;
   line-height: 1.4;
   letter-spacing: -0.5px;
+}
+
+.introduction__description span {
+  font-weight: 600;
 }
 
 .primary, .alternate, .hero__content-rating p {
@@ -84,17 +94,22 @@ body {
   line-height: 1.2;
 }
 
-.primary, .alternate, .hero, .hero__content-reviews {
+.primary, .alternate, .hero, .hero__content-reviews, .introduction, .introduction__list, .introduction__list--item {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 1.6rem;
 }
 
-.hero__content {
+.hero__content, .introduction__content {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
+}
+
+.main-container {
+  max-width: 144rem;
+  margin: 0 auto;
 }
 
 .hero {
@@ -299,7 +314,70 @@ body {
   }
 }
 
-.main-container {
-  max-width: 144rem;
-  margin: 0 auto;
+.introduction {
+  flex-direction: column;
+  gap: 12rem;
+  padding: 12rem 13.5rem;
+}
+
+.introduction__content {
+  grid-template-columns: 56rem 1fr;
+  column-gap: 8rem;
+  position: relative;
+}
+
+.introduction__image {
+  width: 100%;
+  border-radius: 1rem;
+}
+
+.introduction__text h2 {
+  margin-bottom: 3.4rem;
+}
+
+.introduction__text h3 {
+  margin-bottom: 2.4rem;
+  position: relative;
+}
+
+.introduction__text h3::after {
+  content: "";
+  position: absolute;
+  background-image: url("../../starter-code/assets/images/pattern-circle.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 16rem;
+  height: 6.5rem;
+  bottom: 0;
+  left: 27%;
+}
+
+.introduction__title {
+  color: #062630;
+}
+
+.introduction__list {
+  flex-direction: column;
+  align-items: baseline;
+  gap: 2.4rem;
+  list-style: none;
+}
+
+.introduction__list--item {
+  gap: 1.4rem;
+  color: #385159;
+  max-width: 43.1rem;
+}
+
+.introduction__description {
+  color: #385159;
+  max-width: 52rem;
+}
+
+.introduction__logos {
+  position: absolute;
+  bottom: 2rem;
+  left: 50%;
+  transform: translateX(-20%);
 }
