--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,5 +9,6 @@
 
 @import "layout/flexbox";
 @import "layout/grid";
-@import "layout/hero";
 @import "layout/main";
+@import "layout/hero";
+@import "layout/introduction";
