--- a/styles/layout/_introduction.scss
+++ b/styles/layout/_introduction.scss
@@ -15,7 +15,7 @@
 
     &__image {
         width: 100%;
-        border-radius: $border-radius-10;
+        border-radius: 2rem;
     }
 
     &__text {
@@ -25,20 +25,6 @@
 
         h3 {
             margin-bottom: 2.4rem;
-            position: relative;
-
-            &::after {
-                content: "";
-                position: absolute;
-                background-image: url("../../starter-code/assets/images/pattern-circle.png");
-                background-repeat: no-repeat;
-                background-size: cover;
-                background-position: center;
-                width: 16rem;
-                height: 6.5rem;
-                bottom: 0;
-                left: 27%;
-            }
         }
     }
 
@@ -46,6 +32,20 @@
         @extend %text-preset-2;
 
         color: $color-neutral-900;
+
+        span {
+            position: relative;
+            z-index: 1;
+
+            img {
+                width: 16rem;
+                height: 6rem;
+                display: inline;
+                position: absolute;
+                top: 0;
+                left: -1.7rem;
+            }
+        }
     }
 
     &__list {
@@ -83,5 +83,44 @@
         bottom: 2rem;
         left: 50%;
         transform: translateX(-20%);
+    }
+}
+
+// * HACK: tablets (768px ~ 1024px) */
+@media (min-width: 48em) and (max-width: 64em) {
+    .introduction {
+        padding: $spacing-80 $spacing-32;
+        gap: $spacing-80;
+
+        &__content {
+            grid-template-columns: 1fr;
+            row-gap: 4rem;
+
+            &:nth-child(1) div {
+                grid-row: 1 / 2;
+            }
+        }
+
+        &__title {
+            max-width: calc(100vw - 9.6rem);
+        }
+
+        &__list {
+            &--item {
+                max-width: 100%;
+            }
+        }
+
+        &__description {
+            max-width: 100%;
+        }
+
+        &__logos {
+            position: absolute;
+            bottom: 4rem;
+            right: 4rem;
+            transform: translateX(0);
+            left: auto;
+        }
     }
 }
