--- a/styles/main.css
+++ b/styles/main.css
@@ -132,7 +132,7 @@ body {
   top: 50%;
   right: -30%;
   background-color: #9cc9da;
-  opacity: 0.8;
+  opacity: 0.4;
   filter: blur(20rem);
   width: 68.4rem;
   height: 68.4rem;
@@ -204,7 +204,7 @@ body {
     top: 100%;
     right: 100%;
     background-color: #9cc9da;
-    opacity: 0.8;
+    opacity: 0.4;
     filter: blur(20rem);
     width: 68.4rem;
     height: 68.4rem;
@@ -239,7 +239,7 @@ body {
     top: 76%;
     right: -50%;
     background-color: #9cc9da;
-    opacity: 0.8;
+    opacity: 0.4;
     filter: blur(20rem);
     width: 68.4rem;
     height: 68.4rem;
@@ -276,7 +276,7 @@ body {
     top: 73%;
     right: -50%;
     background-color: #9cc9da;
-    opacity: 0.8;
+    opacity: 0.4;
     filter: blur(20rem);
     width: 68.4rem;
     height: 68.4rem;
@@ -304,7 +304,7 @@ body {
     top: 50%;
     right: -30%;
     background-color: #9cc9da;
-    opacity: 0.8;
+    opacity: 0.4;
     filter: blur(20rem);
     width: 68.4rem;
     height: 68.4rem;
@@ -328,7 +328,7 @@ body {
 
 .introduction__image {
   width: 100%;
-  border-radius: 1rem;
+  border-radius: 2rem;
 }
 
 .introduction__text h2 {
@@ -337,24 +337,24 @@ body {
 
 .introduction__text h3 {
   margin-bottom: 2.4rem;
-  position: relative;
-}
-
-.introduction__text h3::after {
-  content: "";
-  position: absolute;
-  background-image: url("../../starter-code/assets/images/pattern-circle.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  width: 16rem;
-  height: 6.5rem;
-  bottom: 0;
-  left: 27%;
 }
 
 .introduction__title {
   color: #062630;
+}
+
+.introduction__title span {
+  position: relative;
+  z-index: 1;
+}
+
+.introduction__title span img {
+  width: 16rem;
+  height: 6rem;
+  display: inline;
+  position: absolute;
+  top: 0;
+  left: -1.7rem;
 }
 
 .introduction__list {
@@ -380,4 +380,34 @@ body {
   bottom: 2rem;
   left: 50%;
   transform: translateX(-20%);
+}
+
+@media (min-width: 48em) and (max-width: 64em) {
+  .introduction {
+    padding: 8rem 3.2rem;
+    gap: 8rem;
+  }
+  .introduction__content {
+    grid-template-columns: 1fr;
+    row-gap: 4rem;
+  }
+  .introduction__content:nth-child(1) div {
+    grid-row: 1 / 2;
+  }
+  .introduction__title {
+    max-width: calc(100vw - 9.6rem);
+  }
+  .introduction__list--item {
+    max-width: 100%;
+  }
+  .introduction__description {
+    max-width: 100%;
+  }
+  .introduction__logos {
+    position: absolute;
+    bottom: 4rem;
+    right: 4rem;
+    transform: translateX(0);
+    left: auto;
+  }
 }
