--- a/styles/main.css
+++ b/styles/main.css
@@ -352,12 +352,13 @@ body {
   color: #062630;
 }
 
-.introduction__title span {
+.introduction__title div {
+  display: inline-block;
   position: relative;
   z-index: 1;
 }
 
-.introduction__title span img {
+.introduction__title div img {
   width: 16rem;
   height: 6rem;
   display: inline;
@@ -389,6 +390,68 @@ body {
   bottom: 2rem;
   left: 50%;
   transform: translateX(-20%);
+}
+
+@media (min-width: 20em) and (max-width: 30em) {
+  .introduction {
+    padding: 6.4rem 1.6rem;
+    gap: 6.4rem;
+  }
+  .introduction__content {
+    grid-template-columns: 1fr;
+    row-gap: 4rem;
+  }
+  .introduction__content:nth-child(1) div {
+    grid-row: 1 / 2;
+  }
+  .introduction__title {
+    font-size: 3.4rem;
+  }
+  .introduction__title div img {
+    width: 11rem;
+    height: auto;
+  }
+  .introduction__description {
+    max-width: 34rem;
+  }
+  .introduction h2, .introduction h3 {
+    margin-bottom: 2.4rem;
+  }
+  .introduction__image {
+    max-width: 100%;
+  }
+  .introduction__list {
+    gap: 1.6rem;
+  }
+  .introduction__logos {
+    display: none;
+  }
+}
+
+@media (min-width: 30.063em) and (max-width: 47.94em) {
+  .introduction {
+    padding: 3.2rem 3.2rem 4.8rem;
+    gap: 4.8rem;
+  }
+  .introduction__content {
+    grid-template-columns: 1fr;
+    row-gap: 6.4rem;
+  }
+  .introduction__content:nth-child(1) div {
+    grid-row: 1 / 2;
+  }
+  .introduction__image {
+    max-width: 100%;
+  }
+  .introduction__list--item {
+    max-width: 100%;
+  }
+  .introduction__description {
+    max-width: 100%;
+  }
+  .introduction__logos {
+    display: none;
+  }
 }
 
 @media (min-width: 48em) and (max-width: 64em) {
@@ -425,16 +488,13 @@ body {
 }
 
 @media (min-width: 64.063em) and (max-width: 79.063em) {
-  html {
-    font-size: 56.25%;
-  }
   .introduction {
     padding: 6.4rem 4.8rem;
     gap: 6.4rem;
   }
   .introduction__content {
     grid-template-columns: 1fr 1fr;
-    column-gap: 6.4rem;
+    row-gap: 6.4rem;
   }
   .introduction__list--item {
     max-width: 100%;
@@ -442,9 +502,6 @@ body {
 }
 
 @media (min-width: 79.125em) and (max-width: 85.69em) {
-  .introduction html {
-    font-size: 56.25%;
-  }
   .introduction__content {
     grid-template-columns: 1fr 1fr;
     column-gap: 6.4rem;
