--- a/styles/main.css
+++ b/styles/main.css
@@ -61,7 +61,7 @@ body {
   }
 }
 
-.introduction__title, .primary, .alternate, .hero__content-rating p, .hero__content-title {
+.journey__step, .introduction__title, .journey__title, .primary, .alternate, .hero__content-rating p, .journey__step p, .hero__content-title {
   font-size: 6.2rem;
   font-weight: 700;
   font-family: "Martian Mono";
@@ -69,10 +69,28 @@ body {
   letter-spacing: -2px;
 }
 
-.introduction__title {
+.journey__step, .introduction__title, .journey__title {
   font-size: 5rem;
   font-weight: 600;
   line-height: 1.3;
+}
+
+.journey__step {
+  font-size: 3.4rem;
+}
+
+.journey__step {
+  letter-spacing: -1px;
+}
+
+.journey__step {
+  font-size: 2.4rem;
+  line-height: 1.1;
+}
+
+.journey__step {
+  font-weight: 400;
+  line-height: 1.2;
 }
 
 .introduction__description span, .hero__content-description, .introduction__list--item, .introduction__description {
@@ -87,7 +105,7 @@ body {
   font-weight: 600;
 }
 
-.primary, .alternate, .hero__content-rating p {
+.primary, .alternate, .hero__content-rating p, .journey__step p {
   font-size: 1.8rem;
   font-weight: 600;
   line-height: 1.3;
@@ -100,14 +118,14 @@ body {
   line-height: 1.2;
 }
 
-.primary, .alternate, .hero, .hero__content-reviews, .introduction, .introduction__list, .introduction__list--item {
+.primary, .alternate, .hero, .hero__content-reviews, .introduction, .introduction__list, .introduction__list--item, .journey, .journey__step--number {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 1.6rem;
 }
 
-.hero__content, .introduction__content {
+.hero__content, .introduction__content, .journey__steps {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
@@ -506,4 +524,68 @@ body {
     grid-template-columns: 1fr 1fr;
     column-gap: 6.4rem;
   }
+}
+
+.journey {
+  margin: 0 13.5rem 12rem;
+  background-image: url("../../starter-code/assets/images/pattern-light-bg.svg");
+  background-color: #faf5f3;
+  padding: 8rem 0;
+  position: relative;
+  z-index: 10;
+  overflow: hidden;
+  border-radius: 1.2rem;
+  flex-direction: column;
+  gap: 6.4rem;
+}
+
+.journey::after {
+  content: "";
+  position: absolute;
+  top: 32%;
+  right: -28%;
+  background-color: #9cc9da;
+  opacity: 0.4;
+  filter: blur(20rem);
+  width: 68.4rem;
+  height: 68.4rem;
+  border-radius: 50%;
+  pointer-events: none;
+  z-index: -1;
+}
+
+.journey header {
+  max-width: 51.2rem;
+  text-align: center;
+}
+
+.journey__title {
+  line-height: 1.2;
+  letter-spacing: -.4rem;
+}
+
+.journey__steps {
+  grid-template-columns: repeat(4, 22.6rem);
+  column-gap: 4.8rem;
+}
+
+.journey__step--number {
+  max-width: 100%;
+  justify-content: space-between;
+  margin-bottom: 2.4rem;
+}
+
+.journey__step--number span, .journey__step--number img {
+  display: inline-block;
+}
+
+.journey__step--number span {
+  line-height: 1;
+  color: #062630;
+  box-shadow: inset 0 0 0 2px #062630;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 0.4rem;
+  text-align: center;
+  padding: .8rem .4rem;
 }
