--- a/styles/main.css
+++ b/styles/main.css
@@ -61,7 +61,7 @@ body {
   }
 }
 
-.journey__step, .introduction__title, .journey__title, .primary, .alternate, .hero__content-rating p, .journey__step p, .hero__content-title {
+.journey__step, .pricing__option--title, .pricing__option--price, .introduction__title, .journey__title, .pricing__header, .primary, .alternate, .hero__content-rating p, .journey__step p, .hero__content-title {
   font-size: 6.2rem;
   font-weight: 700;
   font-family: "Martian Mono";
@@ -69,21 +69,21 @@ body {
   letter-spacing: -2px;
 }
 
-.journey__step, .introduction__title, .journey__title {
+.journey__step, .pricing__option--title, .pricing__option--price, .introduction__title, .journey__title, .pricing__header {
   font-size: 5rem;
   font-weight: 600;
   line-height: 1.3;
 }
 
-.journey__step {
+.journey__step, .pricing__option--title, .pricing__option--price {
   font-size: 3.4rem;
 }
 
-.journey__step {
+.journey__step, .pricing__option--title, .pricing__option--price {
   letter-spacing: -1px;
 }
 
-.journey__step {
+.journey__step, .pricing__option--title {
   font-size: 2.4rem;
   line-height: 1.1;
 }
@@ -93,7 +93,7 @@ body {
   line-height: 1.2;
 }
 
-.introduction__description span, .hero__content-description, .introduction__list--item, .introduction__description {
+.introduction__description span, .hero__content-description, .introduction__list--item, .introduction__description, .pricing__option--price span, .pricing__option--list-item {
   font-size: 2rem;
   font-family: "Inter";
   font-weight: 400;
@@ -118,14 +118,14 @@ body {
   line-height: 1.2;
 }
 
-.primary, .alternate, .hero, .hero__content-reviews, .introduction, .introduction__list, .introduction__list--item, .journey, .journey__step--number {
+.primary, .alternate, .hero, .hero__content-reviews, .introduction, .introduction__list, .introduction__list--item, .journey, .journey__step--number, .pricing, .pricing__option, .pricing__option--list, .pricing__option--list-item {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 1.6rem;
 }
 
-.hero__content, .introduction__content, .journey__steps {
+.hero__content, .introduction__content, .journey__steps, .pricing__options {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
@@ -554,7 +554,7 @@ body {
 
 .journey__title {
   line-height: 1.2;
-  letter-spacing: -.4rem;
+  letter-spacing: -0.4rem;
 }
 
 .journey__steps {
@@ -568,7 +568,8 @@ body {
   margin-bottom: 2.4rem;
 }
 
-.journey__step--number span, .journey__step--number img {
+.journey__step--number span,
+.journey__step--number img {
   display: inline-block;
 }
 
@@ -580,7 +581,7 @@ body {
   height: 4rem;
   border-radius: 0.4rem;
   text-align: center;
-  padding: .8rem .4rem;
+  padding: 0.8rem 0.4rem;
 }
 
 @media (min-width: 20em) and (max-width: 30em) {
@@ -589,12 +590,26 @@ body {
     padding: 4.8rem 3.2rem;
     gap: 4.8rem;
   }
+  .journey::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    right: 100%;
+    background-color: #9cc9da;
+    opacity: 0.4;
+    filter: blur(20rem);
+    width: 68.4rem;
+    height: 68.4rem;
+    border-radius: 50%;
+    pointer-events: none;
+    z-index: -1;
+  }
   .journey header {
     max-width: 100%;
   }
   .journey__title {
     font-size: 3.8rem;
-    letter-spacing: -.2rem;
+    letter-spacing: -0.2rem;
   }
   .journey__steps {
     grid-template-columns: 1fr;
@@ -617,12 +632,26 @@ body {
     padding: 3.2rem 2.4rem;
     gap: 4.8rem;
   }
+  .journey::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    right: 100%;
+    background-color: #9cc9da;
+    opacity: 0.4;
+    filter: blur(20rem);
+    width: 68.4rem;
+    height: 68.4rem;
+    border-radius: 50%;
+    pointer-events: none;
+    z-index: -1;
+  }
   .journey header {
     max-width: 100%;
   }
   .journey__title {
     font-size: 4.2rem;
-    letter-spacing: -.2rem;
+    letter-spacing: -0.2rem;
   }
   .journey__steps {
     grid-template-columns: 1fr 1fr;
@@ -639,6 +668,20 @@ body {
     padding: 4.8rem 3.2rem;
     gap: 4.8rem;
   }
+  .journey::after {
+    content: "";
+    position: absolute;
+    top: 53%;
+    right: -33%;
+    background-color: #9cc9da;
+    opacity: 0.4;
+    filter: blur(20rem);
+    width: 68.4rem;
+    height: 68.4rem;
+    border-radius: 50%;
+    pointer-events: none;
+    z-index: -1;
+  }
   .journey__steps {
     grid-template-columns: repeat(2, 1fr);
     column-gap: 6.4rem;
@@ -651,9 +694,112 @@ body {
     margin: 6.4rem 4.8rem 8rem;
     padding: 6.4rem 4.8rem;
   }
+  .journey::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    right: -33%;
+    background-color: #9cc9da;
+    opacity: 0.4;
+    filter: blur(20rem);
+    width: 68.4rem;
+    height: 68.4rem;
+    border-radius: 50%;
+    pointer-events: none;
+    z-index: -1;
+  }
   .journey__steps {
     grid-template-columns: repeat(3, 1fr);
     column-gap: 8rem;
     row-gap: 6.4rem;
   }
+}
+
+.pricing {
+  max-width: 97rem;
+  margin: 0 auto 12rem;
+  flex-direction: column;
+  gap: 6.4rem;
+}
+
+.pricing__header {
+  color: #062630;
+}
+
+.pricing__options {
+  grid-template-columns: 28.6rem 35rem 28.6rem;
+  column-gap: 2.4rem;
+}
+
+.pricing__option {
+  flex-direction: column;
+  align-items: baseline;
+  box-shadow: inset 0 0 0 1px #e6e1df;
+  border-radius: 0.8rem;
+  gap: 2.4rem;
+  position: relative;
+  overflow: hidden;
+  z-index: 10;
+}
+
+.pricing__option:nth-child(2) {
+  background-color: #faf5f3;
+  z-index: 1;
+}
+
+.pricing__option:nth-child(2)::after {
+  content: "";
+  position: absolute;
+  top: 49%;
+  right: -105%;
+  background-color: #9cc9da;
+  opacity: 0.4;
+  filter: blur(20rem);
+  width: 68.4rem;
+  height: 68.4rem;
+  border-radius: 50%;
+  pointer-events: none;
+  z-index: -1;
+}
+
+.pricing__option--starter, .pricing__option--enterprise {
+  padding: 2.4rem;
+}
+
+.pricing__option--pro {
+  padding: 4rem 2.4rem;
+}
+
+.pricing__option--title {
+  color: #062630;
+}
+
+.pricing__option--price {
+  color: #062630;
+}
+
+.pricing__option--price span {
+  color: #385159;
+}
+
+.pricing__option hr {
+  width: 100%;
+  border: 1px solid #e6e1df;
+}
+
+.pricing__option--list {
+  flex-direction: column;
+  align-items: baseline;
+  gap: 1.6rem;
+  margin-bottom: .8rem;
+  list-style: none;
+}
+
+.pricing__option--list-item {
+  gap: 1.2rem;
+  color: #385159;
+}
+
+.pricing__option--btn {
+  width: 100%;
 }
