--- a/styles/main.css
+++ b/styles/main.css
@@ -628,7 +628,7 @@ body {
 
 @media (min-width: 30.063em) and (max-width: 47.94em) {
   .journey {
-    margin: 3.2rem 1.6rem;
+    margin: 3.2rem 2.4rem;
     padding: 3.2rem 2.4rem;
     gap: 4.8rem;
   }
@@ -802,4 +802,49 @@ body {
 
 .pricing__option--btn {
   width: 100%;
+}
+
+@media (min-width: 30.063em) and (max-width: 47.94em) {
+  .pricing {
+    margin: 0 auto 6.4rem;
+    padding: 0 2.4rem;
+    gap: 4rem;
+  }
+  .pricing__options {
+    grid-template-columns: 35rem;
+    gap: 2.4rem;
+  }
+  .pricing__option--pro {
+    padding: 2.4rem;
+  }
+}
+
+@media (min-width: 48em) and (max-width: 64em) {
+  .pricing {
+    margin: 0 auto 8rem;
+    padding: 0 3.2rem;
+    gap: 4rem;
+    align-items: baseline;
+  }
+  .pricing__options {
+    grid-template-columns: repeat(2, 34rem);
+    gap: 2.4rem;
+  }
+  .pricing__option--starter, .pricing__option--pro, .pricing__option--enterprise {
+    padding: 2.4rem;
+  }
+  .pricing__option:nth-child(2)::after {
+    content: "";
+    position: absolute;
+    top: 57%;
+    right: -107%;
+    background-color: #9cc9da;
+    opacity: 0.4;
+    filter: blur(20rem);
+    width: 68.4rem;
+    height: 68.4rem;
+    border-radius: 50%;
+    pointer-events: none;
+    z-index: -1;
+  }
 }
