--- a/styles/layout/_journey.scss
+++ b/styles/layout/_journey.scss
@@ -72,7 +72,7 @@
 //* HACK: small mobiles (320px ~ 480px) */
 @media (min-width: 20em) and (max-width: 30em) {
     .journey {
-        margin: $spacing-32 $spacing-16;
+        margin: 0 $spacing-16 $spacing-64;
         padding: $spacing-48 $spacing-32;
         gap: $spacing-48;
 
