--- a/styles/layout/_review.scss
+++ b/styles/layout/_review.scss
@@ -19,3 +19,43 @@
         color: $color-neutral-700;
     }
 }
+
+//* HACK: small mobiles (320px ~ 480px) */
+@media (min-width: 20em) and (max-width: 30em) {
+    .review {
+        margin: $spacing-64 auto;
+        padding: 0 $spacing-16;
+        align-items: baseline;
+
+        &__description {
+            text-align: left;
+            font-size: 2.4rem;
+        }
+    }
+}
+
+//* HACK: large mobiles (481px ~ 767px)
+@media (min-width: 30.063em) and (max-width: 47.94em) {
+    .review {
+        padding: 0 $spacing-32;
+        align-items: baseline;
+
+        &__description {
+            text-align: left;
+            font-size: 3.2rem;
+            line-height: 1.1;
+        }
+    }
+}
+
+//* HACK tablets (768px ~ 1024px)
+@media (min-width: 48em) and (max-width: 64em) {
+    .review {
+        padding: 0 $spacing-32;
+        align-items: baseline;
+
+        &__description {
+            text-align: left;
+        }
+    }
+}
