--- a/styles/main.css
+++ b/styles/main.css
@@ -985,3 +985,34 @@ body {
 .footer__copyright-links {
   gap: 2.4rem;
 }
+
+@media (min-width: 20em) and (max-width: 30em) {
+  .footer {
+    padding: 4.8rem 1.6rem 0;
+  }
+  .footer__title {
+    font-size: 3.4rem;
+  }
+  .footer__btn {
+    font-size: 1.6rem;
+  }
+  .footer__copyright {
+    flex-direction: column;
+    padding: 2.4rem 3.2rem;
+  }
+}
+
+@media (min-width: 30.063em) and (max-width: 47.94em) {
+  .footer {
+    padding: 4.8rem 2.4rem 0;
+  }
+  .footer__title {
+    font-size: 4.2rem;
+  }
+}
+
+@media (min-width: 48em) and (max-width: 64em) {
+  .footer {
+    padding: 6.4rem 3.2rem 0;
+  }
+}
