Change image path

--- a/styles/layout/_footer.scss
+++ b/styles/layout/_footer.scss
@@ -2,7 +2,7 @@
     max-width: 144rem;
     margin: 0 auto;
     background-color: $color-neutral-900;
-    background-image: url("../../starter-code/assets/images/pattern-dark-bg.svg");
+    background-image: url("../starter-code/assets/images/pattern-dark-bg.svg");
     padding: $spacing-80 13.5rem 0;
     border-top-left-radius: $border-radius-12;
     border-top-right-radius: $border-radius-12;
