--- a/styles/layout/_hero.scss
+++ b/styles/layout/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-    background-image: url("/starter-code/assets/images/pattern-light-bg.svg");
+    background-image: url("../starter-code/assets/images/pattern-light-bg.svg");
     background-color: $color-neutral-100;
     width: 100%;
     height: auto;
