--- a/styles/layout/_journey.scss
+++ b/styles/layout/_journey.scss
@@ -1,6 +1,6 @@
 .journey {
     margin: 0 13.5rem 12rem;
-    background-image: url("../../starter-code/assets/images/pattern-light-bg.svg");
+    background-image: url("../starter-code/assets/images/pattern-light-bg.svg");
     background-color: $color-neutral-100;
     padding: $spacing-80 0;
     position: relative;
